2009-11-28  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12804: Unlink icon doesn't hide the "unlinked" item

2009-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #10652: drag&drop of page contents not compatible with beLayout (Thanks to Marc Ehret)

2009-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Converted manual to the new template
	
2009-11-26  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.4.1

2009-11-26  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #11180: New tag icons

2009-11-26  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.4.0

2009-11-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #11180: New tag icons
	* Fixed bug: #12715: Use technique of 4.3 "New Content Element Wizard"
	* Fixed bug: #12654: Allow custom "New Site Wizard Template"

2009-11-26  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #8353: Element is referenced instead of moved
	* Fixed issue: #7263: New register for rendering of sections
	* Fixed issue: #8759: Possibility to define startup language setting for FCEs instances

2009-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12564: Localization view overlaps labels and doesn't align
	* Fixed bug: #12713: Unlink icon use garbage which is used for delete in core

2009-11-25  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #12599: Wrong function name in manual 
	* Fixed bug: #9071: Permisions are not calculated when in sub_elmenet view (thanks to Ingo Schmitt) 
	* Fixed bug: #9068: Edit Icon (pencel) is missing in sub_elmenet view (thanks to Ingo Schmitt) 
	* Fixed issue: #8079: possibility to skip TCEforms when adding a new FCE
	* Fixed bug: #8924: processDatamap_afterDatabaseOperations won't properly work within workspaces (thanks to Jose Antonio Guerra)
	* Fixed bug: #12586: delete icon isn't compatible with drag&drop
	* Fixed bug: #12504: pagemodule drag'n'drop is broken when running on 4.3beta
