@@ -1,5 +1,6 @@
 2009-11-28  Tolleiv Nietsch <nietsch@aoemedia.de>
 
+	* Fixed bug: #12819: Mapping module labels are messed up 
 	* Fixed bug: #12804: Unlink icon doesn't hide the "unlinked" item
 
 2009-11-27  Steffen Kamper  <info@sk-typo3.de>
